--- a/macos/Maccy.defaults.plist
+++ b/macos/Maccy.defaults.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>KeyboardShortcuts_delete</key>
+	<string>{"carbonModifiers":2048,"carbonKeyCode":51}</string>
+	<key>KeyboardShortcuts_pin</key>
+	<string>{"carbonKeyCode":35,"carbonModifiers":2048}</string>
 	<key>KeyboardShortcuts_popup</key>
 	<string>{"carbonModifiers":768,"carbonKeyCode":9}</string>
 	<key>SUEnableAutomaticChecks</key>
